# opensandbox-deploy

./: .env.example  README.md  presets.json  sdk_docs.md  test-all-apis.py  test-sandbox.py  test_functionality.sh  test_pip.sh
.claude/: settings.local.json
configs/: gcp-gvisor.sandbox.toml  macos.sandbox.toml
images/: Dockerfile.base  Dockerfile.example  pyproject.toml
scripts/: setup-gcp.sh  setup-macos.sh  start-server.sh  teardown.sh
tests/: test-abstractions.py  test-weasyprint.py  test_functionality.sh  test_functioning.py  test_pip.sh  test_pip_install.py
