[project]
name = "opensandbox-custom-base"
version = "0.1.0"
description = "Centralized dependencies for OpenSandbox images"
requires-python = ">=3.11"
dependencies = [
    "imageio-ffmpeg>=0.5",
    "matplotlib>=3.10.7",
    "moviepy>=1.0.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=10.4.0",
    "python-pptx>=1.0",
    "weasyprint>=68.1",
]
